# datashield-demo

./: Makefile  README.md  ds-summaries.py  ds-utils.py  main.py  pyproject.toml
.datashield/: config.yaml
