[project]
name = "datashield-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datashield @ git+https://github.com/datashield/datashield-python.git@feat/config",
    "datashield-opal>=0.2.0",
    "pandas>=3.0.1",
]
